# Proyecto_I_Datos_II

./: Button.cpp  Button.h  CMakeLists.txt  Client.cpp  Client.h  CodeParser.cpp  CodeParser.h  CodeTxT.cpp  CodeTxT.h  GUI.cpp  GUI.h  Json.h  LogCons.cpp  LogCons.h  MemList.cpp  MemList.h  MemoryList.cpp  MemoryList.h  MemoryManager.cpp  MemoryManager.h  RemV.cpp  RemV.h  TextBox.cpp  TextBox.h  main.cpp
Doxygen Doc/html/: _button_8cpp.html  _button_8h_source.html  _client_8h.html  _code_parser_8cpp.html  _code_parser_8h_source.html  _code_tx_t_8h_source.html  _g_u_i_8cpp.html  _g_u_i_8h.html  _g_u_i_8h_source.html  _log_cons_8h.html  _rem_v_8h.html  _rem_v_8h_source.html  _server_2json_8hpp_source.html  _server_8h_source.html  _sjson_8h_source.html  _text_box_8cpp.html  _text_box_8h.html  _text_box_8h_source.html  class_avai_list-members.html  class_avai_list.html  class_button.html  class_client.html  class_code_parser-members.html  class_code_tx_t-members.html  class_code_tx_t.html  class_g_u_i.html  class_log_cons-members.html  class_memory_list-members.html  class_memory_list.html  class_memory_manager-members.html  class_node-members.html  class_rem_v-members.html  class_rem_v.html  class_server.html  class_text_box-members.html  class_text_box.html  classes.html  classnlohmann_1_1byte__container__with__subtype-members.html  (+138 more)
Server/: CMakeLists.txt  CodeParser.cpp  CodeParser.h  MemoryList.cpp  MemoryList.h  MemoryManager.cpp  MemoryManager.h  Server.cpp  Server.h  Sjson.cpp  Sjson.h  TextList.cpp  TextList.h  main.cpp
tests/: CMakeLists.txt
(+304 files in other folders)
